--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
   
     font-family: Arial, Helvetica, sans-serif;
-    background-color: #15202c;
+    background-color: #007FFF;
     font-size: 15px;
     line-height: 1.5;
     padding: 0;
